src/objects/Miembro_Equipo__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Miembros Equipo</relationshipLabel>
        <relationshipName>Miembros_Equipo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equipo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipo</label>
        <referenceTo>Equipo__c</referenceTo>
        <relationshipLabel>Miembros Equipo</relationshipLabel>
        <relationshipName>Miembros_Equipo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Jefe_de_equipo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jefe de equipo</label>
        <type>Checkbox</type>
    </fields>
    <label>Miembro Equipo</label>
    <nameField>
        <displayFormat>Equipo-{0000}</displayFormat>
        <label>Miembro Equipo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Miembros Equipo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>